@@ -23,6 +23,8 @@ package cascading;
 
 import java.io.IOException;
 
+import cascading.cascade.Cascade;
+import cascading.cascade.CascadeConnector;
 import cascading.flow.Flow;
 import cascading.flow.FlowConnector;
 import cascading.operation.Identity;
